deploy-gcp/namespace.yaml
kind: Namespace
apiVersion: v1
metadata:
  name: qca
  labels:
    name: qca
---
kind: Namespace
apiVersion: v1
metadata:
  name: qca-ingress
  labels:
    name: qca-ingress
