deploy-gcp/qca-node.yaml
---
apiVersion: v1
kind: Service
metadata:
  name: qca-node
spec:
  type: ClusterIP
  ports:
    - port: 80
      targetPort: 8080
  selector:
    app: qca-node
---
apiVersion: v1
kind: Service
metadata:
  name: qca-node-np
spec:
  ports:
    - port: 80
      targetPort: 8080
      protocol: TCP
  type: NodePort
  selector:
    app: qca-node
---
apiVersion: apps/v1
kind: Deployment
metadata:
  name: qca-node
spec:
  replicas: 3
  selector:
    matchLabels:
      app: qca-node
  template:
    metadata:
      labels:
        app: qca-node
    spec:
      containers:
        - name: qca-node
          image: oguzbilgener/qca-node:1.0.1
          ports:
            - containerPort: 8080
          imagePullPolicy: Always
          livenessProbe:
            initialDelaySeconds: 10
            timeoutSeconds: 300
            httpGet:
              path: /status
              port: http
          resources:
            requests:
              memory: 256Mi
              cpu: 500m
